--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="q1">Hidden</div>
 		<div class="q1">Hidden</div>
 		<!-- Deze Div is mede mogelijk gemaakt door StackOverflow -->
-			<div><a href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>				<div id="uniquename" style="display:none;">
+			<div><a href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>				<div id="uniquename">
 				<p><code>+31 (0)6 2604 5919</code>
 			</div>
 	</div>
