--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
 		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
 		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
-		<div class="q1">Hidden</div>
-		<div class="q1">Hidden</div>
-		<!-- Deze Div is mede mogelijk gemaakt door StackOverflow -->
-			<div><a href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>				<div id="uniquename">
-				<p><code>+31 (0)6 2604 5919</code>
-			</div>
+		<div id="hover-area">
+			<p id="emailklik">E-mail</p>
+			
+		<div id="reveal">
+			<code>+31 (0)6 2604 5919
+			</code>
+		</div>
+      </div>
 	</div>
 		<br>
 		<p>Wil je gevoelige informatie met me delen of blijf je gewoon liever anoniem? <a href="/contact">Klik dan hier</a>.</p>
