--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
 		<div id="hover-area">
-			<p id="telefoonklik">E-mail</p>
+			<p id="telefoonklik">Telefoon</p>
 			
 		<div id="reveal">
 			<code>+31 (0)6 2604 5919
