--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
 	<link rel="icon" href="images/icon.png">
 	
-	<!-- script, mede mogelijk gemaakt door StackOverflow -->
+	<!-- scripts, mede mogelijk gemaakt door StackOverflow -->
 	<script type="text/javascript"; src="https://daanvanmonsjou.nl/script.js"></script>
+	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 </head>
 
 <body>
