--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
 	<link rel="icon" href="images/icon.png">
 	
-	<!-- Click to reveal-script, met dank aan Trevor Atlas op codepen.io -->
+	<!-- click to reveal-script, met dank aan Trevor Atlas op codepen.io -->
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script type="text/javascript"; src="https://daanvanmonsjou.nl/script.js"></script>
 </head>
