--- a/index.html
+++ b/index.html
@@ -73,5 +73,5 @@
 	</div>
 </body>
 <footer>
-	<br><div> Hosting via <a href="https://pages.github.com/"; target = "_blank";>Github Pages</a></div>
+	<br><div> Hosting via <a href="https://pages.github.com/"; target = "_blank";>Github Pages</a></div><br>
 </footer>
