--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<link rel="icon" href="images/icon.png">
 	
 	<!-- click to reveal-script, met dank aan Trevor Atlas op codepen.io -->
-	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script type="text/javascript"; src="https://daanvanmonsjou.nl/script.js"></script>
 </head>
 
