--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 	<p>Wil je liever anoniem contact met me opnemen, bijvoorbeeld om gevoelige informatie te delen? Dat kan! Hieronder vind je enkele (veilige) manieren om me te bereiken.</p>
 	<p>Is anonimiteit niet noodzakelijk? Kijk dan op <a href="https://daanvanmonsjou.nl/">mijn homepage</a> voor overige contactgegevens.</p>
 	
-<div id="email">
+<div id="proton">
 	<h4>📧  Protonmail</h4>
 	<p>De makkelijkste manier om veilig en anoniem contact met me op te nemen, is met <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, een veilige e-maildienst. 
 	Gebruik bij voorkeur de <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> voor het aanmaken van een anoniem Protonmail-adres.</p>
@@ -43,8 +43,8 @@
 	<h4>📞  Telefoon</h4>
 	<p>Uiteraard ben ik ook telefonisch bereikbaar op het volgende nummer:</p>
 	<p><code>+31 (0)6 2604 5919</code></p>
-	<p>Dit telefoonnummer werkt ook voor <a href="https://www.signal.org/" target = "_blank">Signal</a> (meest veilig) en <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
-	<p>Gebruik met oog op privacy eventueel een prepaid simkaart. Deze kun je al voor een paar euro aanschaffen bij Primera.</p>
+	<p>Dit telefoonnummer werkt ook voor <a href="https://www.signal.org/" target = "_blank">Signal</a> (veiliger) en <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
+	<p>Je kunt met oog op privacy eventueel een prepaid simkaart gebruiken. Deze kun je al voor een paar euro aanschaffen bij Primera.</p>
 </div>
 
 <div id="overig">
