--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
 	<p>Je kunt mijn public key hier <a href="/files/pgp-public.txt" target = "_blank">bekijken</a> of <a href="/files/PGP-DaanvM-F82472E95EA365152BF6F05DB20656DE8FEA2263.asc">downloaden</a>.
 	Je kunt me daarnaast vinden op <a href="https://keybase.io/daanvanmonsjou" target = "_blank">Keybase</a>.</p>
 	<p>Fingerprint: <code>F824 72E9 5EA3 6515 2BF6 F05D B206 56DE 8FEA 2263</code></p>
+	<p>Als je wilt dat ik je met PGP-versleuteling terugmail, plak dan jouw public key als plain text in je e-mailbericht.</p>
 </div>
 
 <div id="telefoon">
