--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,7 @@
 	<p><code>+31 (0)6 2604 5919</code></p>
 	<p>Dit telefoonnummer werkt ook voor <a href="https://www.signal.org/" target = "_blank">Signal</a> (veiliger) en <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
 	<p>Je kunt met oog op privacy eventueel een prepaid simkaart gebruiken. Deze kun je al voor een paar euro aanschaffen bij Primera.</p>
+	<p>Berichten via Signal en WhatsApp worden op dit nummer sporadisch gecheckt. Je kunt me eventueel per mail een heads-up sturen.</p> 
 </div>
 
 <div id="overig">
