--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,8 @@
 	
 <div id="proton">
 	<h4>📧  Protonmail</h4>
-	<p>De makkelijkste manier om veilig en anoniem contact met me op te nemen, is met <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, een veilige e-maildienst.</p>
-	<p>Protonmail biedt in veel gevallen voldoende beveiliging, maar e-mail is niet het meest veilige medium voor het uitlekken van bijvoorbeeld staatsgeheimen. Proton heeft <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">een blogpost</a> geschreven met gebruiksgevallen voor de dienst.</p>
-	<p>Gebruik bij voorkeur de <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> voor het aanmaken van een anoniem Protonmail-adres.</p>
-	<p>Stuur je bericht vervolgens via je nieuwe Protonmail-adres naar <a href="mailto:daanvanmonsjou@protonmail.com">daanvanmonsjou@protonmail.com</a>.
+	<p>De makkelijkste manier om veilig en anoniem contact met me op te nemen, is met <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, een veilige e-maildienst. Protonmail biedt in veel gevallen voldoende beveiliging, maar e-mail is niet het meest veilige medium voor het uitlekken van bijvoorbeeld staatsgeheimen. Proton heeft <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">een blogpost</a> geschreven met gebruiksgevallen voor de dienst.</p>
+	<p>Gebruik bij voorkeur de <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> voor het aanmaken van een anoniem Protonmail-adres. Stuur je bericht vervolgens via je nieuwe Protonmail-adres naar <a href="mailto:daanvanmonsjou@protonmail.com">daanvanmonsjou@protonmail.com</a>.
 	Je mail komt dan volledig versleuteld bij me aan.</p>
 	<p>Tip: Protonmail heeft een <a href="https://protonirockerxow.onion/" target = "_blank">aparte website</a> voor gebruik met de Tor-browser. Deze link kun je niet openen met een 'gewone' webbrowser.</p>
 </div>
