--- a/contact.html
+++ b/contact.html
@@ -22,10 +22,10 @@
 <div id="text">
 	<p>Wil je liever anoniem contact met me opnemen, bijvoorbeeld om gevoelige informatie te delen? Dat kan! Hieronder vind je enkele (veilige) manieren om me te bereiken.</p>
 	<p>Is anonimiteit niet noodzakelijk? Kijk dan op <a href="https://daanvanmonsjou.nl/">mijn homepage</a> voor overige contactgegevens.</p>
-	
+	In some cases, you have enabled trusted keys but the message does not show a checkmark or a warning icon. That means that the sender’s encryption was not set up with signing enabled. For ProtonMail users, this means the message was sent at a time when ProtonMail did not sign messages.
 <div id="proton">
 	<h4>📧  Protonmail</h4>
-	<p>De makkelijkste manier om veilig en anoniem contact met me op te nemen, is met <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, een veilige e-maildienst. Protonmail biedt in veel gevallen voldoende beveiliging, maar e-mail is niet het meest veilige medium voor het uitlekken van bijvoorbeeld staatsgeheimen. Proton heeft <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">een blogpost</a> geschreven met gebruiksgevallen voor de dienst.</p>
+	<p>De makkelijkste manier om veilig en anoniem contact met me op te nemen, is met <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, een veilige e-maildienst. Protonmail biedt in veel gevallen voldoende beveiliging. Proton heeft <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">een blogpost</a> geschreven met gebruiksgevallen voor de dienst.</p>
 	<p>Gebruik bij voorkeur de <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> voor het aanmaken van een anoniem Protonmail-adres. Stuur je bericht vervolgens via je nieuwe Protonmail-adres naar <a href="mailto:daanvanmonsjou@protonmail.com">daanvanmonsjou@protonmail.com</a>.
 	Je mail komt dan volledig versleuteld bij me aan.</p>
 	<p>Tip: Protonmail heeft een <a href="https://protonirockerxow.onion/" target = "_blank">aparte website</a> voor gebruik met de Tor-browser. Deze link kun je niet openen met een 'gewone' webbrowser.</p>
