--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,14 @@
 <div id="proton">
 	<h4>📧  Protonmail</h4>
 	<p>De makkelijkste manier om veilig en anoniem contact met me op te nemen, is met <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, een veilige e-maildienst. Protonmail biedt in veel gevallen voldoende beveiliging. Proton heeft <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">een blogpost</a> geschreven met gebruiksgevallen voor de dienst.</p>
-	<p>Gebruik bij voorkeur de <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> voor het aanmaken van een anoniem Protonmail-adres. Stuur je bericht vervolgens via je nieuwe Protonmail-adres naar <a href="mailto:daanvanmonsjou@protonmail.com">daanvanmonsjou@protonmail.com</a>.
+	<p>Gebruik bij voorkeur de <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> voor het aanmaken van een anoniem Protonmail-adres. Stuur je bericht vervolgens via je nieuwe Protonmail-adres naar <code>daanvanmonsjou@protonmail.com</code>.
 	Je mail komt dan volledig versleuteld bij me aan.</p>
 	<p>Tip: Protonmail heeft een <a href="https://protonirockerxow.onion/" target = "_blank">aparte website</a> voor gebruik met de Tor-browser. Deze link kun je niet openen met een 'gewone' webbrowser.</p>
 </div>
-	
+
 <div id="PGP">
+
+Fingerprint: F824 72E9 5EA3 6515 2BF6 F05D B206 56DE 8FEA 2263
 	<h4>🔐  PGP</h4>
 	<p>Je kunt eventueel gebruikmaken van PGP om de inhoud van je email te versleutelen. Dit kun je doen met je eigen software, bijvoorbeeld <a href="https://www.gpg4win.org" target = "_blank">Gpg4win</a> voor Windows of <a href="https://gpgtools.org/" target = "_blank">GPG Suite</a> voor macOS. Op deze manier weet je zeker dat je bericht alleen door mij wordt gelezen.</p>
 	<p>Je kunt mijn public key hier <a href="/files/pgp-public.txt" target = "_blank">bekijken</a> of <a href="/files/PGP-DaanvM-F82472E95EA365152BF6F05DB20656DE8FEA2263.asc">downloaden</a>.
