--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,17 @@
 </div>
 
 <div id="text">
-	<p>Wil je liever anoniem contact met me opnemen, bijvoorbeeld om gevoelige informatie te delen? Dat kan! Hieronder vind je enkele (veilige) manieren om me te bereiken.</p>
+	<p>Wil je liever anoniem contact met me opnemen, bijvo
+
+Tip: Protonmail has a separate, optional website specifically for the Tor-browser: https://protonirockerxow.onion/
+
+orbeeld om gevoelige informatie te delen? Dat kan! Hieronder vind je enkele (veilige) manieren om me te bereiken.</p>
 	<p>Is anonimiteit niet noodzakelijk? Kijk dan op <a href="https://daanvanmonsjou.nl/">mijn homepage</a> voor overige contactgegevens.</p>
 
 <div id="proton">
 	<h4>📧  Protonmail</h4>
 	<p>De makkelijkste manier om veilig en anoniem contact met me op te nemen, is met <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, een veilige e-maildienst. Protonmail biedt in veel gevallen voldoende beveiliging. Proton heeft <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">een blogpost</a> geschreven met gebruiksgevallen voor de dienst.</p>
-	<p>Gebruik bij voorkeur de <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> voor het aanmaken van een anoniem Protonmail-adres. Stuur je bericht vervolgens via je nieuwe Protonmail-adres naar <code>daanvanmonsjou@protonmail.com</code>.
+	<p>Gebruik bij voorkeur de <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> voor het aanmaken van een anoniem Protonmail-adres. Stuur je bericht vervolgens via je nieuwe Protonmail-adres naar: <code>daanvanmonsjou@protonmail.com</code>.<br>
 	Je mail komt dan volledig versleuteld bij me aan.</p>
 	<p>Tip: Protonmail heeft een <a href="https://protonirockerxow.onion/" target = "_blank">aparte website</a> voor gebruik met de Tor-browser. Deze link kun je niet openen met een 'gewone' webbrowser.</p>
 </div>
