--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,7 @@
 </div>
 
 <div id="text">
-	<p>Wil je liever anoniem contact met me opnemen, bijvo
-
-Tip: Protonmail has a separate, optional website specifically for the Tor-browser: https://protonirockerxow.onion/
-
-orbeeld om gevoelige informatie te delen? Dat kan! Hieronder vind je enkele (veilige) manieren om me te bereiken.</p>
+	<p>Wil je liever anoniem contact met me opnemen, bijvoorbeeld om gevoelige informatie te delen? Dat kan! Hieronder vind je enkele (veilige) manieren om me te bereiken.</p>
 	<p>Is anonimiteit niet noodzakelijk? Kijk dan op <a href="https://daanvanmonsjou.nl/">mijn homepage</a> voor overige contactgegevens.</p>
 
 <div id="proton">
@@ -36,8 +32,6 @@ orbeeld om gevoelige informatie te delen? Dat kan! Hieronder vind je enkele (vei
 </div>
 
 <div id="PGP">
-
-Fingerprint: F824 72E9 5EA3 6515 2BF6 F05D B206 56DE 8FEA 2263
 	<h4>🔐  PGP</h4>
 	<p>Je kunt eventueel gebruikmaken van PGP om de inhoud van je email te versleutelen. Dit kun je doen met je eigen software, bijvoorbeeld <a href="https://www.gpg4win.org" target = "_blank">Gpg4win</a> voor Windows of <a href="https://gpgtools.org/" target = "_blank">GPG Suite</a> voor macOS. Op deze manier weet je zeker dat je bericht alleen door mij wordt gelezen.</p>
 	<p>Je kunt mijn public key hier <a href="/files/pgp-public.txt" target = "_blank">bekijken</a> of <a href="/files/PGP-DaanvM-F82472E95EA365152BF6F05DB20656DE8FEA2263.asc">downloaden</a>.
