--- a/index.html
+++ b/index.html
@@ -65,5 +65,5 @@
 	</div>
 </body>
 <footer>
-	<br><div> Hosting via <a href="https://pages.github.com/"; target = "_blank";>Github Pages</a></div><br>
+	<br><div> View this site in <a href="https://daanvanmonsjou.com">English</a></div><br>
 </footer>
