--- a/contact.html
+++ b/contact.html
@@ -69,5 +69,5 @@
 </body>
 	
 <footer>
-	<br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
+	<br><div> View this page in <a href="https://daanvanmonsjou.com/">English</a></div>
 </footer>
