--- a/contact.html
+++ b/contact.html
@@ -69,5 +69,5 @@
 </body>
 	
 <footer>
-	<br><div> View this page in <a href="https://daanvanmonsjou.com/">English</a></div>
+	<br><div> View this page in <a href="https://daanvanmonsjou.com/contact">English</a></div>
 </footer>
