--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
 				<p><li><a href="https://tweakers.net/nieuws/160040/ford-brengt-eind-2020-zijn-eerste-elektrische-auto-naar-nederland.html" target = "_blank">Nieuws: Ford brengt eind 2020 zijn eerste elektrische auto naar Nederland</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/159196/het-begon-met-een-error-de-voorganger-van-internet-begon-50-jaar-geleden.html" target = "_blank">.geek: Het begon met een error - De voorganger van internet begon 50 jaar geleden</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/165210/zeldzame-gtx-480-gpu-met-512-cuda-cores-duikt-op.html" target = "_blank">.geek: Zeldzame GTX 480-gpu met 512 Cuda-cores duikt op</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/157896/half-life-2-personages-kunnen-na-vijf-jaar-eindelijk-weer-met-hun-ogen-knipperen.html" target = "_blank">.geek: Half-Life 2-personages kunnen na vijf jaar eindelijk weer met hun ogen knipperen</a></li></p>
+				<p><li><a href="https://tweakers.net/geek/167944/nooit-uitgebrachte-nes-racegame-is-na-30-jaar-hersteld-vanaf-21-floppys.html" target = "_blank">.geek: Nooit uitgebrachte NES-racegame is na 30 jaar hersteld vanaf 21 floppy's</a></li></p>
 		</ul>
 		<br>
 	</div>
