--- a/portfolio.html
+++ b/portfolio.html
@@ -58,5 +58,5 @@
 	</div>
 </body>
 <footer>
-	<br><div> View this page in <a href="https://daanvanmonsjou.nl/portfolio">English</a></div><br>
+	<br><div> View this page in <a href="https://daanvanmonsjou.com/portfolio">English</a></div><br>
 </footer>
