--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,7 @@
 			<ul style="list-style-type:disc;">
 				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">Achtergrond: Hoe staat het met realtime raytracing?</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96: E3-koehandel, raytracing en waf-beperkingen</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">Interview: Billy Khan van id Software over id Tech 7, Doom Eternal en next-gen</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/162226/een-terugblik-op-windows-7-vista-maar-dan-beter.html" target = "_blank">Nieuws: Een terugblik op Windows 7 - 'Vista, maar dan beter'</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/158576/ontwikkelaar-vindt-kwetsbaarheid-in-sudo-commando-voor-linux.html" target = "_blank">Nieuws: Ontwikkelaar vindt kwetsbaarheid in sudo-commando voor Linux</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/160062/hacker-publiceert-2tb-aan-data-van-cayman-national-bank.html" target = "_blank">Nieuws: Hacker publiceert 2TB aan data van Cayman National Bank</a></li></p>
