--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,12 @@
 		<br><br>
 		<hr>
 	</div>
+	<div>
+		<h4>📰	Overig</h4>
+			<ul style="list-style-type:disc;">
+				<p><li><a href="https://verhalen.rtvoost.nl/untitled-project-zbrs7" target = "_blank">RTV Oost: Een nieuwe trend in ransomware (scroll omlaag voor mijn bijdrage)</a></li></p>
+			</ul>
+	</div>
 </body>
 <footer>
 	<br><div> View this page in <a href="https://daanvanmonsjou.com/portfolio">English</a></div><br>
