--- a/portfolio.html
+++ b/portfolio.html
@@ -55,14 +55,14 @@
 				<p><li><a href="https://www.overclock3d.net/news/gpu_displays/amd_is_teasing_an_upcoming_radeon_gpu_on_times_square/1" target = "_blank">AMD is teasing an upcoming Radeon GPU on Times Square</a></li></p>
 			</ul>
 		<br><br>
-		<hr>
 	</div>
 	<div>
 		<h4>📰	Overig</h4>
 			<ul style="list-style-type:disc;">
-				<p><li><a href="https://verhalen.rtvoost.nl/untitled-project-zbrs7" target = "_blank">RTV Oost: Een nieuwe trend in ransomware (scroll omlaag voor mijn bijdrage)</a></li></p>
+				<p><li><a href="https://verhalen.rtvoost.nl/untitled-project-zbrs7" target = "_blank">RTV Oost: Een nieuwe trend in ransomware</a> (scroll omlaag voor mijn bijdrage)</li></p>
 			</ul>
 	</div>
+	<hr>
 </body>
 <footer>
 	<br><div> View this page in <a href="https://daanvanmonsjou.com/portfolio">English</a></div><br>
