--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
 	<div>
 		<h4>📰	Overig</h4>
 			<ul style="list-style-type:disc;">
-				<p><li><a href="https://verhalen.rtvoost.nl/untitled-project-zbrs7" target = "_blank">RTV Oost: Een nieuwe trend in ransomware</a> (scroll omlaag voor mijn bijdrage)</li></p>
+				<p><li><a href="https://verhalen.rtvoost.nl/untitled-project-zbrs7" target = "_blank">RTV Oost: Een nieuwe trend in ransomware</a> (scrol omlaag voor mijn bijdrage)</li></p>
 			</ul>
 	</div>
 	<hr>
