--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,14 @@
 			</ul>
 		<br>
 	</div>
+	
+	<div>
+		<h4>📰	RTV Oost</h4>
+			<ul style="list-style-type:disc;">
+				<p><li><a href="http://verhalen.rtvoost.nl/untitled-project-zbrs7" target = "_blank"> Digitale Oplichting: Een nieuwe trend in ransomware</a> (scrol omlaag voor mijn bijdrage)</li></p>
+			</ul>
+	</div>
+	<br>
 
 	<div>
 		<h4>💾  OC3D</h4>
@@ -55,13 +63,6 @@
 				<p><li><a href="https://www.overclock3d.net/news/gpu_displays/amd_is_teasing_an_upcoming_radeon_gpu_on_times_square/1" target = "_blank">AMD is teasing an upcoming Radeon GPU on Times Square</a></li></p>
 			</ul>
 		<br>
-	</div>
-	
-	<div>
-		<h4>📰	Overig</h4>
-			<ul style="list-style-type:disc;">
-				<p><li><a href="https://verhalen.rtvoost.nl/untitled-project-zbrs7" target = "_blank">RTV Oost: Een nieuwe trend in ransomware</a> (scrol omlaag voor mijn bijdrage)</li></p>
-			</ul>
 	</div>
 	<br>
 	<hr>
