--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 	<h4>📧  Protonmail</h4>
 	<p>De makkelijkste manier om veilig en anoniem contact met me op te nemen, is met <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, een veilige e-maildienst. Protonmail biedt in veel gevallen voldoende beveiliging. Proton heeft <a href="https://protonmail.com/blog/protonmail-threat-model/" target="_blank">een blogpost</a> geschreven met gebruiksgevallen voor de dienst.</p>
 	<p>Gebruik bij voorkeur de <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> voor het aanmaken van een anoniem Protonmail-adres. Stuur je bericht vervolgens via je nieuwe Protonmail-adres naar: <code>daanvanmonsjou@protonmail.com</code></p>
-	<p>Tip: Protonmail heeft een <a href="https://protonirockerxow.onion/" target = "_blank">aparte website</a> voor gebruik met de Tor-browser. Deze link kun je niet openen met een 'gewone' webbrowser.</p>
+	<p>Tip: Protonmail heeft een <a href="https://protonirockerxow.onion/" target = "_blank">aparte website</a> voor gebruik met de Tor-browser. Deze link kun je niet openen met een 'gewone' webbrowser, zoals Chrome of Firefox.</p>
 </div>
 
 <div id="PGP">
