--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div>
 		<br>
 		<h4>👨‍💻 Over mij</h4>
-		<p>Hi! Ik ben Daan, freelance journalist en derdejaars student Journalistiek.</p>
+		<p>Hi! Ik ben Daan, freelance journalist en laatstejaarsstudent Journalistiek.</p>
 		<p>Momenteel ben ik freelancer voor de nieuwsredactie van <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>, waar ik eerder stage liep. </p>
 		<p>Voorheen schreef ik nieuwsberichten voor <a href="https://overclock3d.net" target = "_blank">OC3D</a> en <a href="https://www.invader.be/" target = "_blank">Invader</a>.</p>
 		<p>Ik schrijf voornamelijk artikelen over technologie, waaronder computerhardware en software, videogames, privacy/security en wetenschap.</p>
