--- a/portfolio.html
+++ b/portfolio.html
@@ -34,12 +34,13 @@
 				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96: E3-koehandel, raytracing en waf-beperkingen</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/162226/een-terugblik-op-windows-7-vista-maar-dan-beter.html" target = "_blank">Nieuws: Een terugblik op Windows 7 - 'Vista, maar dan beter'</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/173942/amd-radeon-rx-6800-xt-en-rx-6800-komen-18-november-uit-voor-649-en-579-dollar.html" target = "_blank">Nieuws: AMD Radeon RX 6800 XT en RX 6800 komen 18 november uit voor 649 en 579 dollar</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/174926/khronos-brengt-definitieve-specificatie-van-vulkan-raytracing-standaard-uit.html" target = "_blank">Nieuws: Khronos brengt definitieve specificatie van Vulkan Raytracing-standaard uit</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/169752/jedec-publiceert-definitieve-specificaties-van-ddr5-geheugenstandaard.html" target = "_blank">Nieuws: Jedec publiceert definitieve specificaties van ddr5-geheugenstandaard</a></li></p>				
 				<p><li><a href="https://tweakers.net/nieuws/158576/ontwikkelaar-vindt-kwetsbaarheid-in-sudo-commando-voor-linux.html" target = "_blank">Nieuws: Ontwikkelaar vindt kwetsbaarheid in sudo-commando voor Linux</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/160062/hacker-publiceert-2tb-aan-data-van-cayman-national-bank.html" target = "_blank">Nieuws: Hacker publiceert 2TB aan data van Cayman National Bank</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/158896/microsoft-wil-pcs-met-secured-core-label-beschermen-tegen-firmware-aanvallen.html" target = "_blank">Nieuws: Microsoft wil pc's met Secured-core-label beschermen tegen firmware-aanvallen</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/160040/ford-brengt-eind-2020-zijn-eerste-elektrische-auto-naar-nederland.html" target = "_blank">Nieuws: Ford brengt eind 2020 zijn eerste elektrische auto naar Nederland</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/159196/het-begon-met-een-error-de-voorganger-van-internet-begon-50-jaar-geleden.html" target = "_blank">.geek: Het begon met een error - De voorganger van internet begon 50 jaar geleden</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/165210/zeldzame-gtx-480-gpu-met-512-cuda-cores-duikt-op.html" target = "_blank">.geek: Zeldzame GTX 480-gpu met 512 Cuda-cores duikt op</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/167944/nooit-uitgebrachte-nes-racegame-is-na-30-jaar-hersteld-vanaf-21-floppys.html" target = "_blank">.geek: Nooit uitgebrachte NES-racegame is na 30 jaar hersteld vanaf 21 floppy's</a></li></p>
 			</ul>
 		<br>
