--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,12 @@
 	<div>
 		<h4>💻  Tweakers</h4>
 			<ul style="list-style-type:disc;">
+                                <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Achtergrond: Chips op 2nm en halfgeleiderallianties - de EU wil haar chipsector versterken</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">Achtergrond: Hoe staat het met realtime raytracing?</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">Interview: 'Next-gen wordt fantastisch' - Billy Khan van id Software over id Tech 7, Vulkan, en next-genconsoles</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96: E3-koehandel, raytracing en waf-beperkingen</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/162226/een-terugblik-op-windows-7-vista-maar-dan-beter.html" target = "_blank">Nieuws: Een terugblik op Windows 7 - 'Vista, maar dan beter'</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/173942/amd-radeon-rx-6800-xt-en-rx-6800-komen-18-november-uit-voor-649-en-579-dollar.html" target = "_blank">Nieuws: AMD Radeon RX 6800 XT en RX 6800 komen 18 november uit voor 649 en 579 dollar</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/174926/khronos-brengt-definitieve-specificatie-van-vulkan-raytracing-standaard-uit.html" target = "_blank">Nieuws: Khronos brengt definitieve specificatie van Vulkan Raytracing-standaard uit</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/169752/jedec-publiceert-definitieve-specificaties-van-ddr5-geheugenstandaard.html" target = "_blank">Nieuws: Jedec publiceert definitieve specificaties van ddr5-geheugenstandaard</a></li></p>				
 				<p><li><a href="https://tweakers.net/nieuws/178968/delftse-quantumonderzoekers-erkennen-fout-in-onderzoek-naar-majorana-deeltjes.html" target = "_blank">Nieuws: Delftse quantumonderzoekers erkennen fout in onderzoek naar Majorana-deeltjes </a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/158896/microsoft-wil-pcs-met-secured-core-label-beschermen-tegen-firmware-aanvallen.html" target = "_blank">Nieuws: Microsoft wil pc's met Secured-core-label beschermen tegen firmware-aanvallen</a></li></p>
