--- a/portfolio.html
+++ b/portfolio.html
@@ -48,11 +48,11 @@
 	<div>
 		<h4>📰	RTV Oost</h4>
 			<ul style="list-style-type:disc;">
-				<p><li><a href="http://verhalen.rtvoost.nl/untitled-project-zbrs7" target = "_blank"> Digitale Oplichting: Een nieuwe trend in ransomware</a> (scrol omlaag voor mijn bijdrage)</li></p>
+				<p><li><a href="http://verhalen.rtvoost.nl/untitled-project-zbrs7" target = "_blank"> Digitale Oplichting: Een nieuwe trend in ransomware - scrol omlaag voor mijn bijdrage</a></li></p>
 			</ul>
 	</div>
 	<br>
-
+(scrol omlaag voor mijn bijdrage)
 	<div>
 		<h4>💾  OC3D</h4>
 			<ul style="list-style-type:disc;">
@@ -66,7 +66,7 @@
 		<br>
 	</div>
 	<br>
-	<hr>
+	<hr>(scrol omlaag voor mijn bijdrage)
 </body>
 <footer>
 	<br><div> View this page in <a href="https://daanvanmonsjou.com/portfolio">English</a></div><br>
