--- a/portfolio.html
+++ b/portfolio.html
@@ -67,5 +67,5 @@
 	<hr><br>
 </body>
 <footer>
-	<br><div> View this page in <a href="https://daanvanmonsjou.com/portfolio">English</a></div><br>
+	<div> View this page in <a href="https://daanvanmonsjou.com/portfolio">English</a></div><br>
 </footer>
