--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,7 @@
 		<h4>💻  Tweakers</h4>
 			<ul style="list-style-type:disc;">
                                 <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Achtergrond: Chips op 2nm en halfgeleiderallianties - de EU wil haar chipsector versterken</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9446/exascale-chips-van-eigen-bodem-european-processor-initiative.html" target = "_blank">Achtergrond: Exascale-chips van eigen bodem - European Processor Initiative</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">Achtergrond: Hoe staat het met realtime raytracing?</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">Interview: 'Next-gen wordt fantastisch' - Billy Khan van id Software over id Tech 7, Vulkan, en next-genconsoles</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96: E3-koehandel, raytracing en waf-beperkingen</a></li></p>
@@ -37,7 +38,6 @@
 				<p><li><a href="https://tweakers.net/nieuws/173942/amd-radeon-rx-6800-xt-en-rx-6800-komen-18-november-uit-voor-649-en-579-dollar.html" target = "_blank">Nieuws: AMD Radeon RX 6800 XT en RX 6800 komen 18 november uit voor 649 en 579 dollar</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/169752/jedec-publiceert-definitieve-specificaties-van-ddr5-geheugenstandaard.html" target = "_blank">Nieuws: Jedec publiceert definitieve specificaties van ddr5-geheugenstandaard</a></li></p>				
 				<p><li><a href="https://tweakers.net/nieuws/178968/delftse-quantumonderzoekers-erkennen-fout-in-onderzoek-naar-majorana-deeltjes.html" target = "_blank">Nieuws: Delftse quantumonderzoekers erkennen fout in onderzoek naar Majorana-deeltjes </a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/158896/microsoft-wil-pcs-met-secured-core-label-beschermen-tegen-firmware-aanvallen.html" target = "_blank">Nieuws: Microsoft wil pc's met Secured-core-label beschermen tegen firmware-aanvallen</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/160040/ford-brengt-eind-2020-zijn-eerste-elektrische-auto-naar-nederland.html" target = "_blank">Nieuws: Ford brengt eind 2020 zijn eerste elektrische auto naar Nederland</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/159196/het-begon-met-een-error-de-voorganger-van-internet-begon-50-jaar-geleden.html" target = "_blank">.geek: Het begon met een error - De voorganger van internet begon 50 jaar geleden</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/167944/nooit-uitgebrachte-nes-racegame-is-na-30-jaar-hersteld-vanaf-21-floppys.html" target = "_blank">.geek: Nooit uitgebrachte NES-racegame is na 30 jaar hersteld vanaf 21 floppy's</a></li></p>
