--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
 				<p><li><a href="https://tweakers.net/nieuws/169752/jedec-publiceert-definitieve-specificaties-van-ddr5-geheugenstandaard.html" target = "_blank">Nieuws: Jedec publiceert definitieve specificaties van ddr5-geheugenstandaard</a></li></p>				
 				<p><li><a href="https://tweakers.net/nieuws/178968/delftse-quantumonderzoekers-erkennen-fout-in-onderzoek-naar-majorana-deeltjes.html" target = "_blank">Nieuws: Delftse quantumonderzoekers erkennen fout in onderzoek naar Majorana-deeltjes </a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/184860/tsmc-overweegt-duitsland-als-locatie-voor-zijn-eerste-europese-chipfabriek.html" target = "_blank">News: TSMC overweegt Duitsland als locatie voor zijn eerste Europese chipfabriek</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/160040/ford-brengt-eind-2020-zijn-eerste-elektrische-auto-naar-nederland.html" target = "_blank">Nieuws: Ford brengt eind 2020 zijn eerste elektrische auto naar Nederland</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/188886/amazon-wil-eind-2022-prototypes-van-project-kuiper-internetsatellieten-lanceren.html" target = "_blank">Nieuws: Amazon wil eind 2022 prototypes van Project Kuiper-internetsatellieten lanceren</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/159196/het-begon-met-een-error-de-voorganger-van-internet-begon-50-jaar-geleden.html" target = "_blank">.geek: Het begon met een error - De voorganger van internet begon 50 jaar geleden</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/167944/nooit-uitgebrachte-nes-racegame-is-na-30-jaar-hersteld-vanaf-21-floppys.html" target = "_blank">.geek: Nooit uitgebrachte NES-racegame is na 30 jaar hersteld vanaf 21 floppy's</a></li></p>
 			</ul>
