--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 	<!-- meta & title -->
 	<meta charset="UTF-8">
-	<meta name="description" content="Daan van Monsjou - freelance techjournalist">
+	<meta name="description" content="Daan van Monsjou - Techjournalist">
 	<meta name="author" content="Daan van Monsjou">	
-	<meta name="keywords" content="Daan van Monsjou, techjournalist, freelance">
+	<meta name="keywords" content="Daan van Monsjou, techjournalist, Tweakers">
 	<meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src 'self' https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js averagenl.github.io github.com daanvanmonsjou.nl daanvanmonsjou.nl/script.js cdn.report-uri.com 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po=' daanvanmonsjou.nl/*  daanvanmonsjou.nl/script.js eff.org cdn.report-uri.com platform.twitter.com syndication.twitter.com cdn.syndication.twimg.com youtube.com https://static.doubleclick.net/instream/ad_status.js; frame-src datawrapper.dwcdn.net https://www.youtube.com/ twitter.com https://s.ytimg.com https://platform.twitter.com syndication.twitter.com cdn.syndication.twimg.com; child-src 'self' https://www.youtube.com/ https://s.ytimg.com; style-src 'self' daanvanmonsjou.nl/* daanvanmonsjou.nl/script.js https://daanvanmonsjou.nl/script.js 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po=' https://platform.twitter.com/css/ fonts.googleapis.com 'self'; font-src fonts.gstatic.com; object-src 'self'; img-src https: data:; script-src-elem 'self' daanvanmonsjou.nl/* daanvanmonsjou.nl/script.js 'sha256-sNINh+kurY8RLvJai+7ElQLjpy40s9I4LeVp32TcQ/o=' eff.org https://cdn.report-uri.com/libs/report-uri-js/1.0.1/report-uri-js.min.js https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js https://cdn.syndication.twimg.com/tweets.json https://platform.twitter.com/ 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po='; style-src-attr 'self' daanvanmonsjou.nl/* daanvanmonsjou.nl/script.js 'sha256-TSdVhERf7QyenIlQ77eiEVSvNjCg/FQ544mYSaRUgYw=' 'sha256-sNINh+kurY8RLvJai+7ElQLjpy40s9I4LeVp32TcQ/o=' 'sha256-0EZqoz+oBhx7gF4nvY2bSqoGyy4zLjNF+SDQXGp/ZrY=' 'sha256-i2O4M2S6FF+Ju9WRdMKcnJcvf1uKw9643KxnmM74Dzk=' 'sha256-N5geL3yJqdgsYb0dCJ3UC1PiVLu196CJly3tQ/LwCBc=' 'sha256-ByOXYIXIkfNC3flUR/HoxR4Ak0pjOEF1q8XmtuIa6po='; media-src 'self' https://www.youtube.com; upgrade-insecure-requests; connect-src daanvanmonsjou.report-uri.com; report-uri https://daanvanmonsjou.report-uri.com; frame-ancestors 'none'; base-uri 'self'; form-action 'none';">
 	<title>Daan van Monsjou - Freelance techjournalist</title>
 	
@@ -23,16 +23,15 @@
 <body>
 	<header>
 		<h1>Daan van Monsjou</h1>
-		<h2>freelance (tech)journalist</h2>
+		<h2>Techjournalist bij Tweakers</h2>
 		<br>
 		<hr>
 	</header>
 	<div>
 		<br>
 		<h4>👨‍💻 Over mij</h4>
-		<p>Hi! Ik ben Daan, freelance journalist en recent afgestudeerd student Journalistiek.</p>
-		<p>Momenteel ben ik freelancer voor de nieuwsredactie van <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>, waar ik eerder stage liep. </p>
-		<p>Voorheen schreef ik nieuwsberichten voor <a href="https://overclock3d.net" target = "_blank">OC3D</a> en <a href="https://www.invader.be/" target = "_blank">Invader</a>.</p>
+		<p>Hi! Ik ben Daan, techjournalist voor <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>. Ik schrijf daar nieuwsberichten en achtergrondverhalen. Eerder liep ik stage en deed ik freelancewerk bij Tweakers. </p>
+		<p>Eerder schreef ik nieuwsberichten voor <a href="https://overclock3d.net" target = "_blank">OC3D</a> en <a href="https://www.invader.be/" target = "_blank">Invader</a>.</p>
 		<p>Ik schrijf voornamelijk artikelen over technologie, waaronder de chipsector, computerhardware en software, videogames, privacy/security en wetenschap.</p>
 		<br>
 		<h4>📝 Mijn werk</h4>
