--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 	<header>
 		<h1>Daan van Monsjou</h1>
-		<h2>Techjournalist bij Tweakers</h2>
+		<h2>techjournalist bij Tweakers</h2>
 		<br>
 		<hr>
 	</header>
