--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 <body>
 	<header>
 		<h1>Daan van Monsjou</h1>
-		<h2>techjournalist bij Tweakers</h2>
+		<h2>Techjournalist bij Tweakers</h2>
 		<br>
 		<hr>
 	</header>
 	<div>
 		<br>
 		<h4>👨‍💻 Over mij</h4>
-		<p>Hi! Ik ben Daan, techjournalist voor <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>. Ik schrijf daar nieuwsberichten en achtergrondverhalen. Eerder liep ik stage en deed ik freelancewerk bij Tweakers. </p>
+		<p>Hi! Ik ben Daan, techjournalist voor <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>. waar ik nieuws- en achtergrondverhalen schrijf over een breed scala aan techonderwerpen. Eerder liep ik stage en deed ik freelancewerk bij Tweakers. </p>
 		<p>Eerder schreef ik nieuwsberichten voor <a href="https://overclock3d.net" target = "_blank">OC3D</a> en <a href="https://www.invader.be/" target = "_blank">Invader</a>.</p>
 		<p>Ik schrijf voornamelijk artikelen over technologie, waaronder de chipsector, computerhardware en software, videogames, privacy/security en wetenschap.</p>
 		<br>
