--- a/portfolio.html
+++ b/portfolio.html
@@ -28,21 +28,17 @@
 
 	<div>
 		<h4>💻  Tweakers</h4>
+		<p>Bij Tweakers schrijf ik nieuws- en achtergrondartikelen over een breed scala aan techonderwerpen. Hieronder vind je een aantal mooie voorbeelden van mijn werk.
 			<ul style="list-style-type:disc;">
-                                <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Achtergrond: Chips op 2nm en halfgeleiderallianties - de EU wil haar chipsector versterken</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9446/exascale-chips-van-eigen-bodem-european-processor-initiative.html" target = "_blank">Achtergrond: Exascale-chips van eigen bodem - European Processor Initiative</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">Achtergrond: Hoe staat het met realtime raytracing?</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9592/alles-over-intels-duitse-megachipfabriek.html" target = "_blank">Achtergrond: Alles over Intels Duitse megachipfabriek - Miljarden voor geavanceerde chipproductie</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9870/europa-wil-internetsatellieten-ondanks-kritiek.html" target = "_blank">Achtergrond: EU gaat de concurrentie aan met SpaceX - Europa wil internetsatellieten, ondanks kritiek</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9788/miljardenovername-arm-van-de-baan-waarom-nvidia-zijn-grootste-aankoop-opgeeft.html" target = "_blank">Achtergrond: Miljardenovername Arm van de baan - Waarom Nvidia zijn grootste aankoop opgeeft</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9790/staatssteun-voor-europese-chips-chips-act-moet-halfgeleidersector-redden.html" target = "_blank">Achtergrond: Staatssteun voor Europese Chips - Chips Act moet halfgeleidersector redden</a></li></p>	
-				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">Interview: 'Next-gen wordt fantastisch' - Billy Khan van id Software over id Tech 7, Vulkan, en next-genconsoles</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96: E3-koehandel, raytracing en waf-beperkingen</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/182508/new-york-pizza-waarschuwt-klanten-voor-datalek.html" target = "_blank">Nieuws: New York Pizza waarschuwt klanten voor datalek</a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/178968/delftse-quantumonderzoekers-erkennen-fout-in-onderzoek-naar-majorana-deeltjes.html" target = "_blank">Nieuws: Delftse quantumonderzoekers erkennen fout in onderzoek naar Majorana-deeltjes </a></li></p>
-				<p><li><a href="https://tweakers.net/nieuws/184860/tsmc-overweegt-duitsland-als-locatie-voor-zijn-eerste-europese-chipfabriek.html" target = "_blank">Nieuws: TSMC overweegt Duitsland als locatie voor zijn eerste Europese chipfabriek</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/159196/het-begon-met-een-error-de-voorganger-van-internet-begon-50-jaar-geleden.html" target = "_blank">.geek: Het begon met een error - De voorganger van internet begon 50 jaar geleden</a></li></p>
-				<p><li><a href="https://tweakers.net/geek/167944/nooit-uitgebrachte-nes-racegame-is-na-30-jaar-hersteld-vanaf-21-floppys.html" target = "_blank">.geek: Nooit uitgebrachte NES-racegame is na 30 jaar hersteld vanaf 21 floppy's</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips op 2nm en halfgeleiderallianties - de EU wil haar chipsector versterken</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">Hoe staat het met realtime raytracing?</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9592/alles-over-intels-duitse-megachipfabriek.html" target = "_blank">Alles over Intels Duitse megachipfabriek - Miljarden voor geavanceerde chipproductie</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9912/chiplets-de-grote-toekomst-van-kleine-chips.html" target = "_blank">Chiplets: de grote toekomst van kleine chips </a></li></p>				
+				<p><li><a href="https://tweakers.net/reviews/9870/europa-wil-internetsatellieten-ondanks-kritiek.html" target = "_blank">EU gaat de concurrentie aan met SpaceX - Europa wil internetsatellieten, ondanks kritiek</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9788/miljardenovername-arm-van-de-baan-waarom-nvidia-zijn-grootste-aankoop-opgeeft.html" target = "_blank">Miljardenovername Arm van de baan - Waarom Nvidia zijn grootste aankoop opgeeft</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9790/staatssteun-voor-europese-chips-chips-act-moet-halfgeleidersector-redden.html" target = "_blank">Staatssteun voor Europese Chips - Chips Act moet halfgeleidersector redden</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/9446/exascale-chips-van-eigen-bodem-european-processor-initiative.html" target = "_blank">Exascale-chips van eigen bodem - European Processor Initiative</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">'Next-gen wordt fantastisch' - Billy Khan van id Software over id Tech 7, Vulkan, en next-genconsoles</a></li></p>
 			</ul>
 		<br>
 	</div>
