--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,7 @@
 	
 	<div>
 		<h4>📰	RTV Oost</h4>
+		<p>Tijdens mijn studie heb ik een artikel over ransomware geschreven voor RTV Oost, als onderdeel van een cybercrimedossier. Hieronder vind je dat dossier, inclusief mijn bijdrage.
 			<ul style="list-style-type:disc;">
 				<p><li><a href="http://verhalen.rtvoost.nl/untitled-project-zbrs7" target = "_blank"> Digitale Oplichting: Een nieuwe trend in ransomware - (scrol omlaag voor mijn bijdrage)</a></li></p>
 			</ul>
@@ -52,6 +53,7 @@
 	<br>
 	<div>
 		<h4>💾  OC3D</h4>
+		<p>Voordat ik bij Tweakers aan de slag ging, heb ik enkele jaren gewerkt voor de nieuwsredactie van OC3D. Hieronder vind je een aantal van mijn artikelen.
 			<ul style="list-style-type:disc;">
 				<p><li><a href="https://www.overclock3d.net/news/cpu_mainboard/ryzen_-_am4_feature_roundup/1" target = "_blank">AMD Ryzen - Socket AM4 Feature Roundup</a></li></p>
 				<p><li><a href="https://www.overclock3d.net/news/gpu_displays/meet_manus_-_the_world_s_first_consumer_virtual_reality_glove/1" target = "_blank">Meet Manus - the world's first consumer virtual reality glove</a></li></p>
