--- a/portfolio.html
+++ b/portfolio.html
@@ -30,14 +30,14 @@
 		<h4>💻  Tweakers</h4>
 		<p>Bij Tweakers schrijf ik nieuws- en achtergrondartikelen over een breed scala aan techonderwerpen. Hieronder vind je een aantal mooie voorbeelden van mijn werk.
 			<ul style="list-style-type:disc;">
-                                <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips op 2nm en halfgeleiderallianties - de EU wil haar chipsector versterken</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips op 2nm en halfgeleiderallianties: Hoe de EU haar chipsector wil versterken</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">Hoe staat het met realtime raytracing?</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9592/alles-over-intels-duitse-megachipfabriek.html" target = "_blank">Alles over Intels Duitse megachipfabriek - Miljarden voor geavanceerde chipproductie</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9592/alles-over-intels-duitse-megachipfabriek.html" target = "_blank">Alles over Intels Duitse megachipfabriek</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/9912/chiplets-de-grote-toekomst-van-kleine-chips.html" target = "_blank">Chiplets: de grote toekomst van kleine chips </a></li></p>				
-				<p><li><a href="https://tweakers.net/reviews/9870/europa-wil-internetsatellieten-ondanks-kritiek.html" target = "_blank">EU gaat de concurrentie aan met SpaceX - Europa wil internetsatellieten, ondanks kritiek</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9870/europa-wil-internetsatellieten-ondanks-kritiek.html" target = "_blank">Secure Connectivity Initiative: Europa gaat de concurrentie aan met SpaceX</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/9788/miljardenovername-arm-van-de-baan-waarom-nvidia-zijn-grootste-aankoop-opgeeft.html" target = "_blank">Miljardenovername Arm van de baan - Waarom Nvidia zijn grootste aankoop opgeeft</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9790/staatssteun-voor-europese-chips-chips-act-moet-halfgeleidersector-redden.html" target = "_blank">Staatssteun voor Europese Chips - Chips Act moet halfgeleidersector redden</a></li></p>	
-				<p><li><a href="https://tweakers.net/reviews/9446/exascale-chips-van-eigen-bodem-european-processor-initiative.html" target = "_blank">Exascale-chips van eigen bodem - European Processor Initiative</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/9790/staatssteun-voor-europese-chips-chips-act-moet-halfgeleidersector-redden.html" target = "_blank">European Chips Act moet halfgeleidersector redden</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/9446/exascale-chips-van-eigen-bodem-european-processor-initiative.html" target = "_blank">Exascale-chips van eigen bodem: European Processor Initiative</a></li></p>	
 				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">'Next-gen wordt fantastisch' - Billy Khan van id Software over id Tech 7, Vulkan, en next-genconsoles</a></li></p>
 			</ul>
 		<br>
