--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,7 @@
 		<p>Bij Tweakers schrijf ik nieuws- en achtergrondartikelen over een breed scala aan techonderwerpen. Hieronder vind je een aantal mooie voorbeelden van mijn werk.
 			<ul style="list-style-type:disc;">
                                 <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips op 2nm en halfgeleiderallianties: Hoe de EU haar chipsector wil versterken</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: Hoe werken Nvidia DLSS, Intel XeSS en AMD FSR 2.0?</a></li></p>				
 				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">Hoe staat het met realtime raytracing?</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/9592/alles-over-intels-duitse-megachipfabriek.html" target = "_blank">Alles over Intels Duitse megachipfabriek</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/9912/chiplets-de-grote-toekomst-van-kleine-chips.html" target = "_blank">Chiplets: de grote toekomst van kleine chips </a></li></p>				
