--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 		<h4>💬 Contact</h4>
 		<p>Je kunt me op de volgende manieren bereiken:
 		<br><br>
-		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail</a> | 
+		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@vanmonsjou.xyz">E-mail (privé)</a> | 
+		<a href="mailto:daan@vanmonsjou.xyz"; title="daan@tweakers.net">E-mail (zakelijk)</a> | 
 		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
 		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
@@ -54,6 +55,7 @@
 			<code>+31 (0)6 2513 7455
 			</code>
 		</div>
+			<p>Persbericht sturen? Dat mag gerust naar <code>redactie@tweakers.net</code></p>
       </div>
 	</div>
 		<br>
