--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
 			<code>+31 (0)6 2513 7455
 			</code>
 		</div>
+		</div>
+		<div>
 			<p>Persbericht sturen? Dat mag gerust naar <code>redactie@tweakers.net</code></p>
-      </div>
-	</div>
+		</div>
+		</div>
 		<br>
 		<p>Wil je gevoelige informatie met me delen, of blijf je gewoon liever anoniem? <a href="/contact">Klik dan hier</a>.</p>
 		<br><br>
