--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,7 @@
                                 <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips op 2nm en halfgeleiderallianties: Hoe de EU haar chipsector wil versterken</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: Hoe werken Nvidia DLSS, Intel XeSS en AMD FSR 2.0?</a></li></p>				
 				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">Hoe staat het met realtime raytracing?</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">De bewogen geschiedenis van coreboot: ChromeOS gaf bios-alternatief tweede leven</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/9592/alles-over-intels-duitse-megachipfabriek.html" target = "_blank">Alles over Intels Duitse megachipfabriek</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/9912/chiplets-de-grote-toekomst-van-kleine-chips.html" target = "_blank">Chiplets: de grote toekomst van kleine chips </a></li></p>				
 				<p><li><a href="https://tweakers.net/reviews/9870/europa-wil-internetsatellieten-ondanks-kritiek.html" target = "_blank">Secure Connectivity Initiative: Europa gaat de concurrentie aan met SpaceX</a></li></p>
