--- a/portfolio.html
+++ b/portfolio.html
@@ -31,16 +31,13 @@
 		<p>Bij Tweakers schrijf ik nieuws- en achtergrondartikelen over een breed scala aan techonderwerpen. Hieronder vind je een aantal mooie voorbeelden van mijn werk.
 			<ul style="list-style-type:disc;">
                                 <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips op 2nm en halfgeleiderallianties: Hoe de EU haar chipsector wil versterken</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: Hoe werken Nvidia DLSS, Intel XeSS en AMD FSR 2.0?</a></li></p>				
-				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">Hoe staat het met realtime raytracing?</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/10032/de-bewogen-geschiedenis-van-coreboot-hoe-chromeos-een-bios-alternatief-redde.html" target = "_blank">De bewogen geschiedenis van coreboot: ChromeOS gaf bios-alternatief tweede leven</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9592/alles-over-intels-duitse-megachipfabriek.html" target = "_blank">Alles over Intels Duitse megachipfabriek</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9912/chiplets-de-grote-toekomst-van-kleine-chips.html" target = "_blank">Chiplets: de grote toekomst van kleine chips </a></li></p>				
-				<p><li><a href="https://tweakers.net/reviews/9870/europa-wil-internetsatellieten-ondanks-kritiek.html" target = "_blank">Secure Connectivity Initiative: Europa gaat de concurrentie aan met SpaceX</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9788/miljardenovername-arm-van-de-baan-waarom-nvidia-zijn-grootste-aankoop-opgeeft.html" target = "_blank">Miljardenovername Arm van de baan - Waarom Nvidia zijn grootste aankoop opgeeft</a></li></p>
-				<p><li><a href="https://tweakers.net/reviews/9790/staatssteun-voor-europese-chips-chips-act-moet-halfgeleidersector-redden.html" target = "_blank">European Chips Act moet halfgeleidersector redden</a></li></p>	
-				<p><li><a href="https://tweakers.net/reviews/9446/exascale-chips-van-eigen-bodem-european-processor-initiative.html" target = "_blank">Exascale-chips van eigen bodem: European Processor Initiative</a></li></p>	
+				<p><li><a href="https://tweakers.net/reviews/10654/amerikaans-exportverbod-neemt-chinese-chipsector-in-wurggreep.html" target = "_blank">De chipstrijd tussen Amerika en China: Exportverbod neemt Chinese chipsector in wurggreep</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10322/de-transistor-van-de-toekomst-imec-over-zijn-roadmap-tot-2036.html" target = "_blank">De transistor van de toekomst: Imec over zijn roadmap tot 2036</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/10534/in-gesprek-met-intel-ceo-pat-gelsinger-idm-20-chipproductie-en-arc-gpus.html" target = "_blank">In gesprek met Intel-ceo Pat Gelsinger: Chipproductie, Arc-gpu's en nieuwe fabrieken</a></li></p>				
+				<p><li><a href="https://tweakers.net/reviews/10686/ken-vandine-van-canonical-ubuntu-is-linux-voor-gewone-mensen.html" target = "_blank">'Ubuntu is Linux voor gewone mensen' - Interview met Ken VanDine, hoofd Ubuntu Desktop</a></li></p>	
 				<p><li><a href="https://tweakers.net/reviews/7978/1/billy-khan-van-id-software-next-gen-wordt-fantastisch-inleiding.html" target = "_blank">'Next-gen wordt fantastisch' - Billy Khan van id Software over id Tech 7, Vulkan, en next-genconsoles</a></li></p>
+				<p><li><a href="https://tweakers.net/reviews/9974/hoge-framerates-en-goede-graphics-temporal-upscaling-voor-games.html" target = "_blank">Temporal upscaling: Hoe werken Nvidia DLSS, Intel XeSS en AMD FSR 2.0?</a></li></p>				
 			</ul>
 		<br>
 	</div>
