--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 		<p>Bij Tweakers schrijf ik nieuws- en achtergrondartikelen over een breed scala aan techonderwerpen. Hieronder vind je een aantal mooie voorbeelden van mijn werk.
 			<ul style="list-style-type:disc;">
                                 <p><li><a href="https://tweakers.net/reviews/9058/chips-op-2nm-en-halfgeleiderallianties-de-eu-wil-haar-chipsector-versterken.html" target = "_blank">Chips op 2nm en halfgeleiderallianties: Hoe de EU haar chipsector wil versterken</a></li></p>
-                                <p><li><a href="https://tweakers.net/reviews/10836/financiele-topman-asml-ook-zonder-china-raken-we-onze-machines-wel-kwijt.html" target = "_blank">Interview met financiële topman ASML</a></li></p>
+                                <p><li><a href="https://tweakers.net/reviews/10836/financiele-topman-asml-ook-zonder-china-raken-we-onze-machines-wel-kwijt.html" target = "_blank">Interview met financiële topman ASML: 'Ook zonder China raken we onze machines kwijt'</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/10654/amerikaans-exportverbod-neemt-chinese-chipsector-in-wurggreep.html" target = "_blank">De chipstrijd tussen Amerika en China: Exportverbod neemt Chinese chipsector in wurggreep</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/10322/de-transistor-van-de-toekomst-imec-over-zijn-roadmap-tot-2036.html" target = "_blank">De transistor van de toekomst: Imec over zijn roadmap tot 2036</a></li></p>
 				<p><li><a href="https://tweakers.net/reviews/10534/in-gesprek-met-intel-ceo-pat-gelsinger-idm-20-chipproductie-en-arc-gpus.html" target = "_blank">In gesprek met Intel-ceo Pat Gelsinger: Chipproductie, Arc-gpu's en nieuwe fabrieken</a></li></p>				
